@@ -40,7 +40,9 @@ $foo->method, subroutine without &, perl reserved symbol) - Hiroo Hayashi
 
 =item * Start of a new package "Psh::Completion::Defaults", which, when used, adds a couple of useful pre-made custom completions - warp [2000-03-11]
 
-=item * The 'cd' builtin now has a (currently unlimited) history list, accessible using cd -/+/%number. The new builtin 'dirs' displays the stack
+=item * The 'cd' builtin now has a (currently unlimited) history list, accessible using cd -/+/%number. The new builtin 'dirs' displays the stack - warp [2000-03-13]
+
+=item * On Unix, support for a global pshrc file at /etc/pshrc - warp [2000-03-13]
 
 =back
 
